--- a/app/src/main/res/layout/activity_data.xml
+++ b/app/src/main/res/layout/activity_data.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#223F51B5"
     android:orientation="vertical"
     tools:context=".DataActivity">
 
@@ -16,12 +17,15 @@
 
     <TextView
         android:id="@+id/title2"
-        android:layout_width="wrap_content"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="15dp"
+        android:background="#2D00BCD4"
         android:text="Dados do Aluno"
+        android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -31,31 +35,33 @@
         android:id="@+id/dataNome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_margin="10dp"
         android:ems="10"
+        android:inputType="text"
         android:textAlignment="center"
-        android:textSize="15sp"
-        android:inputType="text"/>
+        android:textSize="15sp" />
 
     <TextView
         android:id="@+id/dataDtNascimento"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_margin="10dp"
         android:ems="10"
+        android:inputType="date"
         android:textAlignment="center"
-        android:textSize="15sp"
-        android:inputType="date"/>
+        android:textSize="15sp" />
 
     <TextView
         android:id="@+id/dadosEndereco"
-        android:layout_marginTop="5dp"
-        android:layout_gravity="center"
-        android:textSize="20sp"
-        android:textColor="@color/black"
-        android:layout_width="wrap_content"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:text="Endereço" />
+        android:layout_gravity="center"
+        android:layout_marginTop="5dp"
+        android:background="#2D00BCD4"
+        android:text="Endereço"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/dataEndereco"
@@ -63,67 +69,71 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:ems="10"
+        android:inputType="text"
         android:textAlignment="center"
-        android:textSize="15sp"
-        android:inputType="text"/>
+        android:textSize="15sp" />
 
     <TextView
         android:id="@+id/dadosNotas1"
-        android:layout_width="wrap_content"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="5dp"
+        android:background="#2D00BCD4"
         android:text="Média do Aluno"
+        android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp" />
 
 
     <LinearLayout
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:orientation="horizontal" >
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/dataNota1"
-            android:layout_marginLeft="30dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="Resultado"/>
+            android:layout_marginLeft="30dp"
+            android:text="Resultado"
+            android:textAlignment="center" />
 
         <TextView
             android:id="@+id/dataNota2"
-            android:layout_marginLeft="30dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="Resultado"/>
+            android:layout_marginLeft="30dp"
+            android:text="Resultado"
+            android:textAlignment="center" />
 
         <TextView
             android:id="@+id/dataNota3"
-            android:layout_marginLeft="30dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="Resultado"/>
+            android:layout_marginLeft="30dp"
+            android:text="Resultado"
+            android:textAlignment="center" />
 
         <TextView
             android:id="@+id/dataNota4"
-            android:layout_marginLeft="30dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="Resultado"/>
+            android:layout_marginLeft="30dp"
+            android:text="Resultado"
+            android:textAlignment="center" />
     </LinearLayout>
 
     <TextView
         android:id="@+id/dadosNotas2"
-        android:layout_width="wrap_content"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="5dp"
+        android:background="#2D00BCD4"
         android:text="Média da Turma"
+        android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp" />
 
@@ -133,14 +143,17 @@
         android:layout_height="45dp"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
-        android:textAlignment="center"
         android:text="Resultado"
+        android:textAlignment="center"
         android:textSize="25sp" />
 
     <Button
         android:id="@+id/btnAdd"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Adicionar" />
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="15dp"
+        android:text="Adicionar"
+        android:textSize="25sp" />
 
 </LinearLayout>
