--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#223F51B5"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -16,10 +17,13 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="15dp"
+        android:background="#5C00BCD4"
         android:text="Médias 30 Alunos"
+        android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -29,11 +33,13 @@
 
     <TextView
         android:id="@+id/dadosAluno"
-        android:layout_width="wrap_content"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
+        android:background="#2D00BCD4"
         android:text="Dados do Aluno"
+        android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="18sp" />
 
@@ -41,8 +47,7 @@
         android:id="@+id/inputNome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:layout_marginTop="20dp"
+        android:layout_margin="10dp"
         android:hint="Nome Completo" />
 
 
@@ -50,18 +55,18 @@
         android:id="@+id/inputDtNascimento"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:layout_marginTop="20dp"
+        android:layout_margin="10dp"
         android:hint="Data de Nascimento"
         android:inputType="date" />
 
     <TextView
         android:id="@+id/dadosEndereco"
-        android:layout_width="wrap_content"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="5dp"
+        android:background="#2D00BCD4"
         android:text="Endereço"
+        android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp" />
 
@@ -69,49 +74,72 @@
         android:id="@+id/inputEndereco"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:layout_marginTop="20dp"
+        android:layout_margin="10dp"
         android:hint="Ex.: Rua Fulano 100 Centro" />
 
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="#2D00BCD4"
+        android:text="Notas"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="20dp" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_marginTop="30dp"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal"
+        android:textAlignment="center">
 
         <EditText
             android:id="@+id/inputNota1"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:baselineAligned="false"
             android:hint="Nota1"
             android:inputType="number|numberDecimal"
-            android:tag="Nota1" />
+            android:tag="Nota1"
+            android:textAlignment="center" />
 
         <EditText
             android:id="@+id/inputNota2"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:baselineAligned="false"
             android:hint="Nota2"
-            android:inputType="number|numberDecimal" />
+            android:inputType="number|numberDecimal"
+            android:textAlignment="center" />
 
         <EditText
             android:id="@+id/inputNota3"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:baselineAligned="false"
             android:hint="Nota3"
-            android:inputType="number|numberDecimal" />
+            android:inputType="number|numberDecimal"
+            android:textAlignment="center" />
 
         <EditText
             android:id="@+id/inputNota4"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:baselineAligned="false"
             android:hint="Nota4"
-            android:inputType="number|numberDecimal" />
+            android:inputType="number|numberDecimal"
+            android:textAlignment="center" />
 
     </LinearLayout>
 
@@ -120,7 +148,8 @@
         android:layout_width="200dp"
         android:layout_height="60dp"
         android:layout_gravity="center"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="15dp"
         android:text="Calcular"
         android:textSize="25sp" />
+
 </LinearLayout>
