--- a/app/src/main/res/layout/activity_data.xml
+++ b/app/src/main/res/layout/activity_data.xml
@@ -1,159 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#223F51B5"
-    android:orientation="vertical"
-    tools:context=".DataActivity">
-
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="match_parent"
-        android:layout_height="84dp"
-        android:layout_marginTop="1dp"
-        app:srcCompat="@drawable/senac" />
-
-    <TextView
-        android:id="@+id/title2"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="15dp"
-        android:background="#2D00BCD4"
-        android:text="Dados do Aluno"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/dataNome"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:ems="10"
-        android:inputType="text"
-        android:textAlignment="center"
-        android:textSize="15sp" />
-
-    <TextView
-        android:id="@+id/dataDtNascimento"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:ems="10"
-        android:inputType="date"
-        android:textAlignment="center"
-        android:textSize="15sp" />
-
-    <TextView
-        android:id="@+id/dadosEndereco"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="5dp"
-        android:background="#2D00BCD4"
-        android:text="Endereço"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/dataEndereco"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:ems="10"
-        android:inputType="text"
-        android:textAlignment="center"
-        android:textSize="15sp" />
-
-    <TextView
-        android:id="@+id/dadosNotas1"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="5dp"
-        android:background="#2D00BCD4"
-        android:text="Média do Aluno"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="20sp" />
-
+    android:fillViewport="true">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:background="#223F51B5"
+        android:orientation="vertical"
+        android:padding="15dp"
+        tools:context=".DataActivity">
+
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="match_parent"
+            android:layout_height="84dp"
+            android:layout_marginTop="1dp"
+            app:srcCompat="@drawable/senac" />
 
         <TextView
-            android:id="@+id/dataNota1"
-            android:layout_width="wrap_content"
+            android:id="@+id/dadosNotas1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:text="Resultado"
-            android:textAlignment="center" />
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:background="#2D00BCD4"
+            android:text="Médias do Alunos"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+
+        <ListView
+            android:id="@+id/listaAlunos"
+            android:layout_width="wrap_content"
+            android:layout_height="320dp" />
 
         <TextView
-            android:id="@+id/dataNota2"
-            android:layout_width="wrap_content"
+            android:id="@+id/dadosNotas2"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:text="Resultado"
-            android:textAlignment="center" />
+            android:layout_gravity="center"
+            android:layout_marginTop="15dp"
+            android:background="#2D00BCD4"
+            android:text="Média da Turma"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/dataNota3"
-            android:layout_width="wrap_content"
+            android:id="@+id/dataMedia"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
             android:text="Resultado"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/dataNota4"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/btnVoltar"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:text="Resultado"
-            android:textAlignment="center" />
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="15dp"
+            android:backgroundTint="#3F51B5"
+            android:text="Voltar" />
+
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/dadosNotas2"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="5dp"
-        android:background="#2D00BCD4"
-        android:text="Média da Turma"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/dataMedia"
-        android:layout_width="140dp"
-        android:layout_height="45dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:text="Resultado"
-        android:textAlignment="center"
-        android:textSize="25sp" />
-
-    <Button
-        android:id="@+id/btnAdd"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="15dp"
-        android:text="Adicionar"
-        android:textSize="25sp" />
-
-</LinearLayout>
+</ScrollView>
