--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,155 +1,211 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/txtRelatorio"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#223F51B5"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
-
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="wrap_content"
-        android:layout_height="87dp"
-        android:layout_marginTop="1dp"
-        app:srcCompat="@drawable/senac" />
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="15dp"
-        android:background="#5C00BCD4"
-        android:text="Médias 30 Alunos"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/dadosAluno"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:background="#2D00BCD4"
-        android:text="Dados do Aluno"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="18sp" />
-
-    <EditText
-        android:id="@+id/inputNome"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:hint="Nome Completo" />
-
-
-    <EditText
-        android:id="@+id/inputDtNascimento"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:hint="Data de Nascimento"
-        android:inputType="date" />
-
-    <TextView
-        android:id="@+id/dadosEndereco"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="#2D00BCD4"
-        android:text="Endereço"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="20sp" />
-
-    <EditText
-        android:id="@+id/inputEndereco"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:hint="Ex.: Rua Fulano 100 Centro" />
-
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="#2D00BCD4"
-        android:text="Notas"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="20dp" />
+    android:fillViewport="true">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:orientation="horizontal"
-        android:textAlignment="center">
+        android:layout_height="match_parent"
+        android:background="#223F51B5"
+        android:orientation="vertical"
+        android:padding="15dp"
+        tools:context=".MainActivity">
+
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="wrap_content"
+            android:layout_height="87dp"
+            android:layout_marginTop="1dp"
+            app:srcCompat="@drawable/senac" />
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="#5C00BCD4"
+            android:text="Médias 30 Alunos"
+            android:textAlignment="center"
+            android:textColor="@color/purple_700"
+            android:textSize="25sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/dadosAluno"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="#2D00BCD4"
+            android:text="Dados do Aluno"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="18sp" />
 
         <EditText
-            android:id="@+id/inputNota1"
-            android:layout_width="0dp"
+            android:id="@+id/inputNome"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:baselineAligned="false"
-            android:hint="Nota1"
-            android:inputType="number|numberDecimal"
-            android:tag="Nota1"
-            android:textAlignment="center" />
+            android:layout_margin="5dp"
+            android:hint="Nome Completo" />
+
 
         <EditText
-            android:id="@+id/inputNota2"
-            android:layout_width="0dp"
+            android:id="@+id/inputDtNascimento"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:baselineAligned="false"
-            android:hint="Nota2"
-            android:inputType="number|numberDecimal"
-            android:textAlignment="center" />
+            android:layout_margin="5dp"
+            android:hint="Data de Nascimento"
+            android:inputType="date" />
+
+        <TextView
+            android:id="@+id/dadosEndereco"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="#2D00BCD4"
+            android:text="Endereço"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
 
         <EditText
-            android:id="@+id/inputNota3"
-            android:layout_width="0dp"
+            android:id="@+id/inputEndereco"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:baselineAligned="false"
-            android:hint="Nota3"
-            android:inputType="number|numberDecimal"
-            android:textAlignment="center" />
+            android:layout_margin="5dp"
+            android:hint="Ex.: Rua Fulano 100 Centro" />
 
-        <EditText
-            android:id="@+id/inputNota4"
-            android:layout_width="0dp"
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:baselineAligned="false"
-            android:hint="Nota4"
-            android:inputType="number|numberDecimal"
-            android:textAlignment="center" />
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="#2D00BCD4"
+            android:text="Notas"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="20dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal"
+            android:textAlignment="center">
+
+            <EditText
+                android:id="@+id/inputNota1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:baselineAligned="false"
+                android:hint="1ª Nota"
+                android:inputType="number|numberDecimal"
+                android:tag="Nota1"
+                android:textAlignment="center" />
+
+            <EditText
+                android:id="@+id/inputNota2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:baselineAligned="false"
+                android:hint="2ª Nota"
+                android:inputType="number|numberDecimal"
+                android:textAlignment="center" />
+
+            <EditText
+                android:id="@+id/inputNota3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:baselineAligned="false"
+                android:hint="3ª Nota"
+                android:inputType="number|numberDecimal"
+                android:textAlignment="center" />
+
+            <EditText
+                android:id="@+id/inputNota4"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:baselineAligned="false"
+                android:hint="4ª Nota"
+                android:inputType="number|numberDecimal"
+                android:textAlignment="center" />
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btnCalcular"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:onClick="calcularMedia"
+            android:text="Calcular"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/dataMedia"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnAddAluno"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:backgroundTint="#8BC34A"
+                android:text="Adicionar"
+                android:textColor="@color/purple_700" />
+
+            <Button
+                android:id="@+id/btnLimpar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:backgroundTint="#F44336"
+                android:text="Limpar"
+                android:textColor="@color/purple_700" />
+
+            <Button
+                android:id="@+id/btnRelatorio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:backgroundTint="#FFEB3B"
+                android:text="Relatório"
+                android:textColor="@color/purple_700" />
+        </LinearLayout>
 
     </LinearLayout>
-
-    <Button
-        android:id="@+id/btnCalcular"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="15dp"
-        android:text="Calcular"
-        android:textSize="25sp" />
-
-</LinearLayout>
+</ScrollView>
