--- a/app/src/main/res/layout/activity_data.xml
+++ b/app/src/main/res/layout/activity_data.xml
@@ -53,7 +53,7 @@
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/dataMedia"
+            android:id="@+id/dataMediaTurma"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
