--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -63,8 +64,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:hint="Data de Nascimento"
-            android:inputType="date" />
+            android:hint="Data de Nascimento Ex.:00/00/0000"
+            android:inputType="date|number"
+            android:maxLength="10" />
 
         <TextView
             android:id="@+id/dadosEndereco"
@@ -163,7 +165,7 @@
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/dataMedia"
+            android:id="@+id/dataMediaAluno"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
